# whisper

./: HOWTOUSE.md  Makefile  README.md  env.example  pyproject.toml  run_local.sh  run_server.py  test_api_demo.py
src/whisper_api/: api.py  config.py  main.py  models.py  service.py
tests/: test_api.py
